--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,8 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add token.list.json
-          git commit -m 'Auto-generated token.list.json'
+          TIMESTAMP=$(date -u "+%Y-%m-%d %H:%M:%S")
+          git commit -m 'Auto-generated token.list.json on ${TIMESTAMP}'
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
